--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,1 +1,8 @@
-<p>banner works!</p>
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide" *ngFor="let banner of listaBanner">
+            <img class="banner-slide" [src]="banner" alt="">
+        </div>
+    </div>
+</div>
+
